logg.txt
Postgres is up - executing command
Server.js is being executed!
/usr/src/app/src/repositories/dashboard/feedbacks.js:80
    attributes: ["textValue"],
              ^
SyntaxError: Unexpected token ':'
    at internalCompileFunction (node:internal/vm:76:18)
    at wrapSafe (node:internal/modules/cjs/loader:1283:20)
    at Module._compile (node:internal/modules/cjs/loader:1328:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1422:10)
    at Module.load (node:internal/modules/cjs/loader:1203:32)
    at Module._load (node:internal/modules/cjs/loader:1019:12)
    at Module.require (node:internal/modules/cjs/loader:1231:19)
    at require (node:internal/modules/helpers:177:18)
    at Object.<anonymous> (/usr/src/app/src/repositories/dashboard/index.js:4:28)
    at Module._compile (node:internal/modules/cjs/loader:1364:14)
Node.js v18.20.8